@@ -1,3 +1,9 @@
+Wed Apr  4 15:42:57 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tools/scripts/lcov.pl:
+
+          Cleanup of script.
+
 Wed Apr  4 15:28:48 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
 
         * tools/scripts/lcov.pl:
